<resources>
    <string name="app_name">UF1Act12</string>
    <string name="Toggle_Scrollbar">Toggle_Scrollbar</string>
    <string name="toggle_scrollbar">Toggle_Scrollbar</string>
    <string name="button7">Button7</string>
    <string name="button6">button6</string>
    <string name="button5">button5</string>
    <string name="button4">button4</string>
    <string name="button3">button3</string>
    <string name="button2">button2</string>
    <string name="button1">button1</string>
</resources>